fixed phone code field on smalle devices and added arrows for sliders on smaller devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -226,11 +226,7 @@ body {
   overflow: hidden;
 }
 
-@media (max-width: 810px) {
-  .product-list .slick-arrow {
-    display: none !important;
-  }
-}
+
 
 .product-list .slick-arrow {
   transform: scale(2) !important;
@@ -390,11 +386,11 @@ form .field {
 }
 
 .product-area-field {
-  width: 20%;
+  width: 25%;
 }
 
 .product-tel-field {
-  width: 80%;
+  width: 75%;
 }
 
 .submit-btn-field {
@@ -452,13 +448,33 @@ form .field {
   }
 }
 
-@media (max-width: 415px) {
+@media (max-width: 490px) {
   .product-area-field {
     width: 30%;
   }
 
   .product-tel-field {
     width: 70%;
+  }
+}
+
+@media (max-width: 450px) {
+  .product-area-field {
+    width: 35%;
+  }
+
+  .product-tel-field {
+    width: 65%;
+  }
+}
+
+@media (max-width: 360px) {
+  .product-area-field {
+    width: 40%;
+  }
+
+  .product-tel-field {
+    width: 60%;
   }
 }
 //--------------------------------------------------------
